--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -234,24 +234,26 @@
                                         <select class="form-control border-grey" name="categoryFilter"
                                             [(ngModel)]="accountTypeFilter" (change)="accountTypeClick($event)"
                                             id="exampleFormControlSelect2">
-                                            <option value="0">{{accountType}}</option>
+                                            <option value="0">All</option>
                                             <option *ngFor="let item of accountTypeList;" [value]="item.id">
                                                 {{item.name}}
                                             </option>
                                         </select>
                                     </div>
-                                    <div class="block-btn">
+                                    <!-- <div class="block-btn">
                                         <button class="btn btn-square bg-lightgrey" (click)="ResetGrid()">
                                             <img src="./assets/media/ClosingCheckList/block.png" alt="block-btn">
                                         </button>
-                                    </div>
+                                    </div> -->
                                     <div>
                                        
                                             
-                                            <label class="switch">
+                                            <!-- <label class="switch">
                                                 <input type="checkbox" [(checked)]="AllOrActive"  (change)="changeToggleValue()">
                                                 <span class="slider round"></span>
-                                            </label>
+                                            </label> -->
+
+                                            <label class="switch"><input type="checkbox" id="togBtn" [(checked)]="AllOrActive"  (change)="changeToggleValue()" ><div class="slider round"><!--ADDED HTML --><span class="on">All</span><span class="off">Active</span><!--END--></div></label>
                                       
                                        
                                     </div>
@@ -455,10 +457,10 @@
                                                     <div class="thead-box"><b>{{"Action" | localize}} : </b></div>
                                                     <div class="tdata-box">
                                                         <div class="btn-group">
-                                                            <a class="btn"
+                                                            <a *ngIf="!item.isDeleted == true" class="btn"
                                                                 href="javascript:;" (click)="editAccount(item.id)">                                                           
                                                                 <img src="../../../../assets/img/edit.svg"></a>
-                                                            <a class="btn" href="javascript:;"
+                                                            <a *ngIf="!item.isDeleted == true" class="btn" href="javascript:;"
                                                                 (click)="deleteAccount(item.id)">
                                                                 <img src="../../../../assets/img/del.svg"></a>
                                                                 <a *ngIf="item.isDeleted == true" class="btn" href="javascript:;"
