--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -7,9 +7,7 @@
                         <h3 class="text-navyblue kt-portlet__head-title">
                             {{"TaskDetails" | localize}}
                         </h3>
-                        <a *ngIf="isDeleted == true" class="btn" href="javascript:;"
-                        (click)="restoreTask()">
-                        <i class="fas fa-trash-restore"></i></a>
+                       
                     </div>
                     <div class="kt-portlet__head-toolbar">
                         <a href="javascript: void(0);" (click)="BackToTaskList()">
@@ -301,13 +299,15 @@
                                 </div>
                                 <div class="col-md-4">
 
-                                    <a class="action-btn btn-pointer"><img src="../../../../assets/img/edit.svg"
+                                    <a *ngIf="!isDeleted == true" class="action-btn btn-pointer"><img src="../../../../assets/img/edit.svg"
                                             (click)="RedirectToEditTaskPage()"></a>
-                                    <a class="action-btn btn-pointer" (click)="deleteTask()"><img
+                                    <a *ngIf="!isDeleted == true" class="action-btn btn-pointer" (click)="deleteTask()"><img
                                             src="../../../../assets/img/del.svg"></a>
-                                    <a class="action-btn btn-pointer" (click)="duplicateTask()"><img
+                                    <a *ngIf="!isDeleted == true" class="action-btn btn-pointer" (click)="duplicateTask()"><img
                                             src="../../../../assets/img/dup.svg"></a>
-                                          
+                                            <a *ngIf="isDeleted == true" class="btn" href="javascript:;"
+                                            (click)="restoreTask()">
+                                            <i class="fas fa-trash-restore"></i></a>   
                                 </div>
                             </div>
                             <div class="row">
