--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
@@ -15,13 +15,15 @@
                         </a>
                         <div class="btn-group">
 
-                            <a  class="btn" href="javascript:;"
+                            <a *ngIf="!itemizationDto.isDeleted == true" class="btn" href="javascript:;"
                                 (click)="editItemizedItem()">
                                 <img src="../../../../assets/img/edit.svg"></a>
-                            <a class="btn" href="javascript:;"
+                            <a *ngIf="!itemizationDto.isDeleted == true" class="btn" href="javascript:;"
                                 (click)="deleteItem()">
                                 <img src="../../../../assets/img/del.svg"></a>
-
+                                <a *ngIf="itemizationDto.isDeleted == true" class="btn" href="javascript:;"
+                                (click)="restoreItemizedItem()">
+                                <i class="fas fa-trash-restore"></i></a>   
 
                         </div>
                     </div>
