Recover Password Screen Designed

--- a/angular/src/account/password/forgot-password.component.html
+++ b/angular/src/account/password/forgot-password.component.html
@@ -1,3 +1,43 @@
+<div class="kt-grid kt-grid--ver kt-grid--root" [@routerTransition]>
+    <div class="kt-grid kt-grid--hor kt-grid--root kt-login kt-login--v2 kt-login--signin" id="kt_login">
+        <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor"
+            style="background-image: url(./assets/media//bg/background_1.png);">
+            <div class="kt-grid__item kt-grid__item--fluid kt-login__wrapper">
+                <div class="kt-login__container">
+                    <div class="kt-login__logo">
+                        <a href="#">
+                            <img src="./assets/media/logos/logo.png">
+                        </a>
+                    </div>
+                    <div class="kt-login__signin">
+                        <div class="kt-login__head">
+                            <h3 class="kt-login__title">Recover Password</h3>
+                        </div>
+    
+                        <form #forgotPassForm="ngForm" class="kt-form" method="post" novalidate (ngSubmit)="save()">
+                            <div class="input-group">
+                                <input #emailAddressInput="ngModel"
+                                    [(ngModel)]="model.emailAddress" autoFocus
+                                    class="form-control" type="text" autocomplete="new-password"
+                                    placeholder="{{'EmailAddress' | localize}} *" name="emailAddressInput"
+                                    required maxlength="256" email />
+                                    <validation-messages [formCtrl]="emailAddressInput"*ngIf="!emailAddressInput.touched"></validation-messages>
+                            </div>
+    
+    
+                            
+                            <div class="kt-login__actions">
+                                <button type="submit" id="kt_login_signin_submit" [disabled]="!forgotPassForm.form.valid"
+                                    class="btn btn-pill kt-login__btn-primary">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- 
 <div class="kt-login__form" [@routerTransition]>
     <div class="kt-login__title">
         <h3 class="m-0">
@@ -20,4 +60,4 @@
             <button type="submit" class="btn btn-primary btn-elevate kt-login__btn-primary" [disabled]="!forgotPassForm.form.valid" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-check"></i> {{"Submit" | localize}}</button>
         </div>
     </form>
-</div>
+</div> -->
