--- a/angular/src/app/admin/management/management.component.html
+++ b/angular/src/app/admin/management/management.component.html
@@ -4,11 +4,11 @@
       <div [class]="containerClass">
         <div class="kt-subheader__main">
             <h3 class="kt-subheader__title">
-                <span>{{"Administration" | localize}}</span>
+                <span>{{"Management" | localize}}</span>
             </h3>
             <span class="kt-subheader__separator kt-subheader__separator--v"></span>
             <span class="kt-subheader__desc">
-                {{"Management" | localize}}
+                {{"TimeManagement" | localize}}
             </span>
         </div>
         <div class="kt-subheader__toolbar">
