Designed Reset Password Screen

--- a/angular/src/account/password/forgot-password.component.html
+++ b/angular/src/account/password/forgot-password.component.html
@@ -28,7 +28,7 @@
                             
                             <div class="kt-login__actions">
                                 <button type="submit" id="kt_login_signin_submit" [disabled]="!forgotPassForm.form.valid"
-                                    class="btn btn-pill kt-login__btn-primary">Submit</button>
+                                    class="btn btn-pill kt-login__btn-primary">{{"Submit" | localize}}</button>
                             </div>
                         </form>
                     </div>
