--- a/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
@@ -81,37 +81,113 @@
                                     <label>{{"Description" | localize}}</label>
                                     <p>{{amortizationDto.description}}</p>
                                 </div>
-                                <select class="form-control input-medium">
-                                    <option>{{"Comments" | localize}}</option>
-                                    <option>{{"History" | localize}}</option>
-                                </select>
-
-                                <div class="commentmainView show-comments">
-                                    <div class="kt-widget3 ">
-                                        <div *ngFor="let i of postedCommentList" class="kt-widget3__item ">
-                                            <div class="comments-header kt-widget3__header">
-                                                <div class="kt-widget3__user-img">
-                                                    <div class="kt-user-card-v2__pic">
-                                                        <div class="kt-badge kt-badge--xl kt-badge--warning">
-                                                            {{i.userName | firstLetterOfWords}}</div>
+                                <div class="activity-box">
+                                    <h5>Activity</h5>
+                                </div>
+                                <tabset class="tab-container tabbable-line">
+                                    <tab heading="{{'Comment' | localize}}">
+                                        <div class="commentmainView show-comments">
+                                            <div class="kt-widget3 ">
+                                                <div *ngFor="let i of postedCommentList" class="kt-widget3__item ">
+                                                    <div class="comments-header kt-widget3__header">
+                                                        <div class="kt-widget3__user-img">
+                                                            <div class="kt-user-card-v2__pic">
+                                                                <div class="kt-badge kt-badge--xl kt-badge--warning">
+                                                                    {{i.userName | firstLetterOfWords}}</div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="kt-widget3__info">
+                                                            <a class="kt-widget3__username">
+                                                                {{i.userName}}
+                                                            </a><br>
+                                                        </div>
+                                                        <span class="kt-widget3__status kt-font-info">
+                                                            {{i.creationDateTime | momentFormat:'DD MMMM YYYY'}}
+                                                        </span>
+                                                    </div>
+                                                    <div class="kt-widget3__body show-comments-inner">
+                                                        <p class="kt-widget3__text commentViewBox" innerHTML="{{i.body}}">
+                                                        </p>
                                                     </div>
                                                 </div>
-                                                <div class="kt-widget3__info">
-                                                    <a class="kt-widget3__username">
-                                                        {{i.userName}}
-                                                    </a><br>
-                                                </div>
-                                                <span class="kt-widget3__status kt-font-info">
-                                                    {{i.creationDateTime | momentFormat:'DD MMMM YYYY'}}
-                                                </span>
-                                            </div>
-                                            <div class="kt-widget3__body show-comments-inner">
-                                                <p class="kt-widget3__text commentViewBox" innerHTML="{{i.body}}">
-                                                </p>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
+                                    </tab>
+                                    <tab heading="{{'History' | localize}}">
+                                        <div  *ngFor="let i of historyOfTask"  class="activity-box">
+                                                                                              
+                                            <div *ngIf="i.propertyName != 'AssigneeId' && i.propertyName != 'CreationTime'" class="activity-inner d-flex flex-wrap align-items-center mb-4">
+                                                <div class="activity-inner-a mb-3">
+                                                    <div class="badge2 bg-golden d-inline-flex align-items-center justify-content-center">{{i.result.ChangeOccurUser.name   | firstLetterOfWords}}</div>
+                                                </div>
+                                                <div class="activity-inner-b mb-3">
+                                                    <div class="mb-2 notification-line1">
+                                                        <span>{{i.result.ChangeOccurUser.name}}</span> Changed the <span>{{i.propertyName}}</span> {{i.changeTime | momentFormat:'Do MMM YY LTS'}}
+                                                    </div>
+                                                    <div>
+                                                        <span class="text-lightgrey">{{i.result.PreviousValue}}</span>
+                                                        <img src="./assets/media/ClosingCheckList/picturemessage_uzg0nq30.png" class="mr-2 ml-2 arrowimage">
+                                                        <span>{{i.result.NewValue}}</span>
+                                                    </div>
+        
+                                                </div>
+                                            </div>
+                                    
+                                            <div *ngIf="i.propertyName == 'AssigneeId'" class="activity-inner d-flex flex-wrap align-items-center mb-4">
+                                                <div class="activity-inner-a mb-3">
+                                                    <div class="badge2 bg-golden d-inline-flex align-items-center justify-content-center">{{i.result.ChangeOccurUser.name   | firstLetterOfWords}}</div>
+                                                </div>
+        
+                                                <div class="activity-inner-b mb-3">
+                                                    <div class="mb-2 notification-line1">
+                                                        <span>{{i.result.ChangeOccurUser.name}}</span> Changed the <span>Assignee</span>{{i.changeTime | momentFormat:'Do MMM YY LTS'}}
+                                                    </div>
+                                                    <div>
+                                                        <div class="badge2 {{i.result.colorPreviousValue}} d-inline-flex align-items-center justify-content-center">{{i.result.PreviousValue.name | firstLetterOfWords}}</div>
+                                                        <span>{{i.result.PreviousValue.name}}</span>
+                                                        <img src="./assets/media/ClosingCheckList/picturemessage_uzg0nq30.png" class="mr-2 ml-2 arrowimage">
+                                                        <div class="badge2 {{i.result.colorNewValue}} d-inline-flex align-items-center justify-content-center">{{i.result.NewValue.name | firstLetterOfWords}}</div>
+                                                        <span>{{i.result.NewValue.name}}</span>
+                                                    </div>
+                                                </div>
+                                            </div> 
+                                        </div> 
+                                    </tab>
+                                </tabset>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                             
                                 <div class="form-group giveCommentView" *ngIf="commantBox">
                                     <label>{{"Comments" | localize}}</label>
                                     <div (click)="commentClick()">
