--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -17,7 +17,7 @@
 								</div>
 							</div>
 						</a>
-						<a class="kt-wizard-v1__nav-item" href="#" data-ktwizard-type="step">
+						<a class="kt-wizard-v1__nav-item" href="#" data-ktwizard-type="step" data-ktwizard-state="current">
 							<div class="kt-wizard-v1__nav-body">
 								<div class="kt-wizard-v1__nav-icon">
 									<i class="flaticon-list"></i>
@@ -66,7 +66,7 @@
 				<!--begin: Form Wizard Form-->
 				<form class="kt-form" id="kt_form">
 					<!--begin: Form Wizard Step 1-->
-					<div class="kt-wizard-v1__content" data-ktwizard-type="step-content" data-ktwizard-state="current">
+					<div class="kt-wizard-v1__content" data-ktwizard-type="step-content" data-ktwizard-state="current" >
 						<div class="kt-heading kt-heading--md">Setup Your Current Location</div>
 						<div class="kt-form__section kt-form__section--first">
 							<div class="kt-wizard-v1__form">
@@ -368,7 +368,7 @@
 					<!--end: Form Wizard Step 1-->
 
 					<!--begin: Form Wizard Step 2-->
-					<div class="kt-wizard-v1__content" data-ktwizard-type="step-content">
+					<div class="kt-wizard-v1__content" data-ktwizard-type="step-content" data-ktwizard-state="current">
 						<div class="kt-heading kt-heading--md">Enter the Details of your Delivery</div>
 						<div class="kt-form__section kt-form__section--first">
 							<div class="kt-wizard-v1__form">
