--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
@@ -144,7 +144,7 @@
                                                     <div class="form-group" *ngIf="commantModal">
                                                         <label>{{"Comments" | localize}}</label>
                                                         <p-editor [(ngModel)]="amortizationDto.commentBody"
-                                                            (keydown.space)="$event.preventDefault();" required name="HtmlEditorInput"
+                                                             name="HtmlEditorInput"
                                                             [style]="{'height':'150px'}">
                                                         </p-editor>
                                                         <div class="btnMargin" >
