--- a/angular/src/account/password/reset-password.component.html
+++ b/angular/src/account/password/reset-password.component.html
@@ -16,7 +16,7 @@
     
                         <form #resetPassForm="ngForm" class="kt-form" method="post" novalidate (ngSubmit)="save()">
                             <div class="input-group">
-                                <input type="password" name="Password" class="form-control placeholder-no-fix" [(ngModel)]="model.password" #Password="ngModel" placeholder="{{'Password' | localize}}" validateEqual="PasswordRepeat"
+                                <input type="password" autocomplete="off" name="Password" class="form-control placeholder-no-fix" [(ngModel)]="model.password" #Password="ngModel" placeholder="{{'Password' | localize}}" validateEqual="PasswordRepeat"
                                        reverse="true" [requireDigit]="passwordComplexitySetting.requireDigit" [requireLowercase]="passwordComplexitySetting.requireLowercase"
                                        [requireUppercase]="passwordComplexitySetting.requireUppercase" [requireNonAlphanumeric]="passwordComplexitySetting.requireNonAlphanumeric" [requiredLength]="passwordComplexitySetting.requiredLength"
                                        required>
@@ -31,7 +31,7 @@
                                 </ul>
                             </div>
                             <div class="form-group m-form__group">
-                                <input type="password" name="PasswordRepeat" class="form-control placeholder-no-fix" [ngModel]="model.passwordRepeat" #PasswordRepeat="ngModel" placeholder="{{'PasswordRepeat' | localize}}" validateEqual="Password"
+                                <input type="password" name="PasswordRepeat" autocomplete="off" class="form-control placeholder-no-fix" [ngModel]="model.passwordRepeat" #PasswordRepeat="ngModel" placeholder="{{'PasswordRepeat' | localize}}" validateEqual="Password"
                                        reverse="false" [requireDigit]="passwordComplexitySetting.requireDigit" [requireLowercase]="passwordComplexitySetting.requireLowercase"
                                        [requireUppercase]="passwordComplexitySetting.requireUppercase" [requireNonAlphanumeric]="passwordComplexitySetting.requireNonAlphanumeric" [requiredLength]="passwordComplexitySetting.requiredLength"
                                        required>
