--- a/angular/src/account/login/validate-two-factor-code.component.html
+++ b/angular/src/account/login/validate-two-factor-code.component.html
@@ -7,7 +7,7 @@
         <form #twoFactorForm="ngForm" class="kt-form" method="post" (ngSubmit)="submit()">
 
             <div class="form-group">
-                <input #passwordInput="ngModel" autoFocus [(ngModel)]="code" class="form-control" type="password" autocomplete="new-password" placeholder="{{'Code' | localize}} *" name="code" required maxlength="16" />
+                <input #passwordInput="ngModel" autoFocus [(ngModel)]="code" class="form-control" type="password" autocomplete="off" placeholder="{{'Code' | localize}} *" name="code" required maxlength="16" />
                 <validation-messages [formCtrl]="passwordInput"></validation-messages>
             </div>
 
