--- a/angular/src/account/password/forgot-password.component.html
+++ b/angular/src/account/password/forgot-password.component.html
@@ -18,7 +18,7 @@
                             <div class="input-group">
                                 <input #emailAddressInput="ngModel"
                                     [(ngModel)]="model.emailAddress" autoFocus
-                                    class="form-control" type="text" autocomplete="new-password"
+                                    class="form-control" type="text" autocomplete="off"
                                     placeholder="{{'EmailAddress' | localize}} *" name="emailAddressInput"
                                     required maxlength="256" email />
                                     <validation-messages [formCtrl]="emailAddressInput"*ngIf="!emailAddressInput.touched"></validation-messages>
