--- a/angular/src/app/main/categories/categories.component.html
+++ b/angular/src/app/main/categories/categories.component.html
@@ -22,7 +22,7 @@
         <div [class]="containerClass + ' kt-grid__item kt-grid__item--fluid'">
             <div class="kt-portlet kt-portlet--mobile">
                 <div class="kt-portlet__body">
-                    <form class="kt-form" autocomplete="new-password">
+                    <form class="kt-form" autocomplete="off">
                         <div>
                             <div class="row d-flex justify-content-end mb-4">
                                 <div class="col-md-3 kt-margin-b-20-tablet-and-mobile">
