--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -145,7 +145,7 @@
                                 <div class="col-md-12">
                                     <label>{{"Instruction" | localize}}</label>
                                     <div class="form-group">
-                                        <p-editor [(ngModel)]="getTaskForEdit.instruction" name="HtmlEditorInput"
+                                        <p-editor [(ngModel)]="getTaskForEdit.instructionBody" name="HtmlEditorInput"
                                             [style]="{'height':'150px'}"></p-editor>
                                     </div>
                                 </div>
